[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/destruction/Circle.gd" type="Script" id=1]
[ext_resource path="res://src/destruction/Destructible.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 2

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="Destructible" type="Node2D"]
script = ExtResource( 2 )
thing = NodePath("Viewport/Circle")
CollisionHolderNodePath = NodePath("CollisionHolder")

[node name="Viewport" type="Viewport" parent="."]
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 1
gui_disable_input = true

[node name="Circle" type="Node2D" parent="Viewport"]
material = SubResource( 2 )
position = Vector2( 512, 256 )
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )
centered = false

[node name="CollisionHolder" type="Node2D" parent="."]

[node name="CollisionRebuildTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="CullTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="CollisionRebuildTimer" to="." method="rebuild_collisions"]
[connection signal="timeout" from="CullTimer" to="." method="_cull_foreground_duplicates"]
